# packr-v2

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yaml  on_push.yaml
include/packr/: entry.hpp  fs_node.hpp  misc_structs.hpp  types.hpp  utils.hpp
scripts/: tests-setup.sh
src/: entry.cpp  fs_node.cpp  main.cpp  utils.cpp
tests/: helpers.hpp  main.cpp  shared_test_data.hpp  side_tests.cpp
tests/test-data/dummy_dir1/inner1/: hallo.txt
